--- a/client/src/components/BlogList.css
+++ b/client/src/components/BlogList.css
@@ -54,8 +54,41 @@
   width: 100%;
 }
 
+.author-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.author-info figure {
+  margin: 0;
+  margin-right: 10px;
+}
+
+.author-info img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.pofile-info {
+  flex: 1;
+  padding: 15px;
+}
+
+.pofile-info .name {
+  font-weight: bold;
+}
+
+.pofile-info .date {
+  display: block;
+  font-size: 12px;
+  color: gray;
+}
+
 .grid-item {
-  flex: 1 1 calc(33.33% - 20px);
+  flex: 1 1 calc(100% - 20px);
   background: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -70,6 +103,11 @@
 }
 
 /* Blog post styles */
+
+.blog-post {
+  width: 100%;
+}
+
 .blog-post .img-holder {
   width: 100%;
   height: 200px;
@@ -84,39 +122,38 @@
 
 .blog-post .text-holder {
   padding: 15px;
+  font-size: small;
 }
 
-.blog-post .author-info {
+/* .blog-post .author-info {
   list-style: none;
   padding: 0;
   display: flex;
   gap: 15px;
   color: #888;
-}
+} */
 
-.blog-post .post-title h4 {
-  font-size: 18px;
+.post-title {
+  font-size: 5px;
   margin: 0;
   color: #333;
-}
-
-.blog-post .post-title h4 a {
-  text-decoration: none;
-  color: #007bff;
 }
 
 .blog-post .read-more {
   display: block;
   margin-top: 10px;
   color: #007bff;
-  font-size: 14px;
+  font-size: 10px;
 }
 
 .blog-post .read-more:hover {
   text-decoration: underline;
 }
 
-/* Right section (optional widget area) */
-.right-section {
-  width: 20%;
+.views-likes {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+  margin-top: 10px;
 }
